Reflected changes in Clock.bat into Clock.sh