@@ -1,8 +1,8 @@
 #!/bin/bash
+pushd .
+cd "out/production/Main_Coursework"
 ./StartRMI.sh
+popd
 java -cp "out/production/Main_Coursework" \
-	-Djava.security.manager \
-	-Djava.security.policy=server.policy \
-	-Djava.rmi.codebase=file:/Users/huw/Documents/University/COMP2207/Main_Coursework/out/production/Main_Coursework/ \
 	-Djava.rmi.server.codebase=file:/Users/huw/Documents/University/COMP2207/Main_Coursework/out/production/Main_Coursework/ \
 	Clock $*
